# meltonschsystm

./: .env  .env.save  .gitignore  RELEASE_SETUP.md  _app.timetable.tsx  capacitor.config.ts  client.server.ts  direct-login.html  fix.py  fix_index.py  fix_route_tree.py  fix_tauri.py  fix_tauri_conf.py  gemini-code-1780851855656.html  index.html  keystore.b64  legal.html  package-lock.json  package.json  package.json.save  pnpm-lock.yaml  pnpm-workspace.yaml  release-key.b64  server.ts  use-auth.tsx  vite.config.desktop.ts  vite.config.ts  wrangler .jsonc  wrangler.jsonc  wrangler.toml
.github/: trigger-ci.txt
.lovable/: plan.md
android/: build.gradle  capacitor.settings.gradle  keystore.properties  release-key.jks  smartdev-release.keystore
db/: push_tokens.sql
desktop/: empty-stub.ts  index.html  node-stream-stub.ts  node-stream-web-stub.ts
meltonschsystm-main/: _app.staff.tsx  capacitor.config.json  capacitor.config.ts  package-lock.json  wrangler.jsonc
public/: legal.html  robots.txt  sitemap.xml
scripts/: build-android.sh  patch-wrangler.py  prepare-deploy.cjs  setup-signing.sh
smart-upgrade-hub-main/: package.json
smartdev/: .gitignore  end } from resend  package.json  pnpm-lock.yaml
src/: _app.admin.communications.tsx  _app.admin.leaving-certificates.tsx  _app.announcements.tsx  _app.ids.bulk.tsx  _app.timetable.tsx  entry-client.tsx  entry-desktop.tsx  platform.invoices.tsx  routeTree.gen.ts  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+452 files in other folders)
