[package]
name = "smartdev"
version = "1.0.0"
description = "SmartDev ERP - School Management System"
authors = ["SmartDev <info@smartdev.co.ke>"]
license = "MIT"
repository = "https://github.com/scchoolsystem/meltonschsystm"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
